[package]
name = "orderflow-rs"
version = "0.1.0"
edition = "2021"
description = "Market microstructure simulator for stress-testing order books"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
socket2 = "0.5"
ctrlc = "3.4"

[profile.release]
opt-level = 2
lto = true
